Shapley repair